--- a/index.html
+++ b/index.html
@@ -102,29 +102,15 @@
 
 
   <!-- ABOUT -->
-  <div class="container-fluid " id="ABOUT" style="position: relative; background-color: white; padding-top: 130px;" >
+  <div class="container-fluid " id="ABOUT" style="position: relative; background-color: white; padding-top: 130px;">
     <div class="page-title-holder">
       <h3 class="text-center" style="color: whitesmoke;padding: 53px 0px;">
         ABOUT
       </h3>
     </div>
-    <div class="container  px-5" >
-      <div class="row .row-div py-5">
-        <div class="col-md-6 col-12 text-md-start text-center py-5">
-          <p class="pb-3" style="color:rgb(180, 180, 180)">
-            WO WE ARE
-            </h1>
-          <h2 class="pb-4">
-          Live up to
-          your creative potential.
-          </h2>
-          <p class="pb-3" style="color:rgb(180, 180, 180)">
-            Code the energy hidden in matter citizens of distant epochs from which we spring drake equation perga inconspicuous
-            motespatch clean designed code and energy matter.
-          </p>
-          <a class="btn rounded-pill" href="#"> LEARN MORE</a>
-        </div>
-        <div class="col-md-6 col-12 text-md-start text-center py-5">
+    <div class="container  px-5">
+      <div class="row row-div py-5">
+        <div class="col-md-6 col-12 text-md-start text-center py-5  ">
           <p class="pb-3" style="color:rgb(180, 180, 180)">
             WO WE ARE
             </h1>
@@ -133,10 +119,115 @@
             your creative potential.
           </h2>
           <p class="pb-3" style="color:rgb(180, 180, 180)">
-            Code the energy hidden in matter citizens of distant epochs from which we spring drake equation perga inconspicuous
+            Code the energy hidden in matter citizens of distant epochs from which we spring drake equation perga
+            inconspicuous
             motespatch clean designed code and energy matter.
           </p>
           <a class="btn rounded-pill" href="#"> LEARN MORE</a>
+        </div>
+        <div class="col-md-6 col-12 text-center  ">
+          <div>
+            <img src="/images/about_01.jpg" alt="" width="100%">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- CLIENTS -->
+  <div class="container-fluid container-Background">
+    <div class="container-md container-fluid  py-5">
+      <div class="row py-5  ">
+        <div class="col-12 text-md-start text-center " style="background-color: black; padding: 90px 0px; ">
+          <div id="myCarousel" class="carousel  carousel-fade  " data-bs-ride="carousel">
+
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner ">
+
+              <div class="carousel-item active ">
+                <div class="px-md-5 px-0 ">
+                  <div class="px-md-5 px-0 ">
+
+                    <div class="px-5">
+                      <img src="/images/quotes_image.png" alt="" width="100px ">
+                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold; color: rgb(198, 198, 198);">Lorem
+                        ipsum dolor sit amet consectetur, adipisicing
+                        elit. Odio nostrum dolore unde? Officia
+                        temporibus
+                        perspiciatis dolore molestiae voluptatum unde, voluptate esse atque et delectus inventore
+                        doloremque
+                        praesentium odit beatae velit?
+                      </p>
+                      <p style="color: rgb(198, 198, 198);"><span>
+                          <img src="/images/quote_image_02.jpg" alt="" class="rounded-pill">
+
+                          &nbsp;&nbsp;peter Hall &nbsp;&nbsp;
+                          <b style="color: rgb(255, 255, 255);">CEO </b>
+                        </span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item ">
+                <div class="px-md-5 px-0 ">
+                  <div class="px-md-5 px-0 ">
+
+                    <div class="px-5">
+
+                      <img src="/images/quotes_image.png" alt="" width="100px ">
+                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold; color: rgb(198, 198, 198);">Lorem
+                        ipsum dolor sit
+                        amet consectetur, adipisicing
+                        elit. Odio nostrum dolore unde? Officia
+                        temporibus perspiciatis dolore molestiae voluptatum unde, voluptate esse atque adipisicing
+                        elit. Odio nostrum dolore unde?
+                      </p>
+                      <p style="color: rgb(198, 198, 198);"><span>
+                          <img src="/images/quote_image_03.jpg" alt="" class="rounded-pill">
+
+                          &nbsp;Jane Williams
+                          <b style="color: rgb(255, 255, 255); ">&nbsp;&nbsp;DESIGNER </b>
+                        </span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item ">
+                <div class="px-md-5 px-0 ">
+                  <div class="px-md-5 px-0 ">
+
+                    <div class="px-5">
+                      <img src="/images/quotes_image.png" alt="" width="100px ">
+                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold; color: rgb(198, 198, 198);">Lorem
+                        ipsum dolor sit
+                        amet consectetur, adipisicing
+                        elit. Odio nostrum dolore unde? Officia
+                        temporibus perspiciatis dolore molestiae voluptatum unde,
+                        perspiciatis dolore molestiae voluptatum unde, voluptate esse atque?
+                      </p>
+                      <p style="color: rgb(198, 198, 198);"><span>
+                          <img src="/images/quote_image_04.jpg" alt="" class="rounded-pill">
+
+                          &nbsp;&nbsp;john smith &nbsp;&nbsp;
+                          <b style="color: rgb(255, 255, 255);">GURU </b>
+                        </span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <!-- Carousel controls -->
+            <a class="carousel-control-prev" href="#myCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -147,6 +238,29 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <script src="js/jarallax.js"></script>
+  <script src="js/jarallax-element.min.js"></script>
 
   <script src="/bootstrap.bundle.js"></script>
 </body>
