--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
   <!-- HOME -->
   <div class="container-fluid container-Background" style="padding: 82px 0 ;">
-    <div class="container  px-5 ">
-      <div class="row .row-div py-5">
-        <div class="col-12 text-md-start text-center py-5">
+    <div class="container  px-5 bg-danger">
+      <div class="row .row-div py-5 bg-info">
+        <div class="col-12 text-md-start text-center py-5 bg-success">
           <h1 class="pb-5 text-white ">
             Technology <br>
             & Visual Agency
@@ -83,9 +83,10 @@
   <!-- SERVICES -->
   <div class="container-fluid " id="SERVICES" style="position: relative; background-color: black;padding: 130px 0px ;">
     <div class="page-title-holder">
-      <h3 class="text-center" style="color: whitesmoke;padding: 53px 0px;">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+
         SERVICES
-      </h3>
+      </h4>
     </div>
     <div class="container  px-5 ">
       <div class="row .row-div py-5">
@@ -104,13 +105,13 @@
   <!-- ABOUT -->
   <div class="container-fluid " id="ABOUT" style="position: relative; background-color: white; padding-top: 130px;">
     <div class="page-title-holder">
-      <h3 class="text-center" style="color: whitesmoke;padding: 53px 0px;">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
         ABOUT
-      </h3>
+      </h4>
     </div>
-    <div class="container  px-5">
-      <div class="row row-div py-5">
-        <div class="col-md-6 col-12 text-md-start text-center py-5  ">
+    <div class="container  px-5 bg-danger">
+      <div class="row row-div py-5 bg-info">
+        <div class="col-md-6 col-12 text-md-start text-center py-5  bg-success">
           <p class="pb-3" style="color:rgb(180, 180, 180)">
             WO WE ARE
             </h1>
@@ -217,7 +218,6 @@
                   </div>
                 </div>
               </div>
-
             </div>
 
             <!-- Carousel controls -->
@@ -239,10 +239,42 @@
 
 
 
+  <!-- NEWS -->
+  <div class="container-fluid " id="NEWS" style="position: relative; background-color: white; padding-top: 130px;">
+    <div class="page-title-holder">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+        NEWS
+      </h4>
+    </div>
+    <div class="container px-5 bg-danger">
+      <div class="row py-5 bg-info">
+
+        
+        <div class="col-md-4 col-12 text-md-start text-center px-3 bg-success">
+          <div>
+            <div class="Image-Hover">
+
+              <img src="/images/blog_img_01.jpg" alt="">
+            </div>
+
+            <h3 class="py-3">How to write rogue mote of dust love</h3>
+            <p style="color:rgb(180, 180, 180)">How to write rogue mote of dust love
+              Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
+              of global
+              death ...</p>
+          </div>
+
+        </div>
+
+        <div class="text-center mt-5">
+          <a class="btn rounded-pill" href="#"> GO TO BLOG</a>
+        </div>
 
 
 
-
+      </div>
+    </div>
+  </div>
 
 
 
