--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item py-3 alig">
-            <a class="Link" href="#">Home</a>
+        <ul class="navbar-nav ms-auto ">
+          <li class="nav-item py-3 alig ">
+            <a class="Link active" href="#">Home</a>
           </li>
           <li class="nav-item py-3">
             <a class="Link" href="#SERVICES">Services</a>
@@ -68,7 +68,7 @@
   <div class="container-fluid container-Background" style="padding: 82px 0 ;">
     <div class="container  px-5 bg-danger">
       <div class="row .row-div py-5 bg-info">
-        <div class="col-12 text-md-start text-center py-5 bg-success">
+        <div class="col-12 text-md-start text-center py-5 px-md-3 px-0 bg-success">
           <h1 class="pb-5 text-white ">
             Technology <br>
             & Visual Agency
@@ -111,7 +111,7 @@
     </div>
     <div class="container  px-5 bg-danger">
       <div class="row row-div py-5 bg-info">
-        <div class="col-md-6 col-12 text-md-start text-center py-5  bg-success">
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0  bg-success">
           <p class="pb-3" style="color:rgb(180, 180, 180)">
             WO WE ARE
             </h1>
@@ -126,7 +126,7 @@
           </p>
           <a class="btn rounded-pill" href="#"> LEARN MORE</a>
         </div>
-        <div class="col-md-6 col-12 text-center  ">
+        <div class="col-md-6 col-12 text-center px-md-3 px-0  ">
           <div>
             <img src="/images/about_01.jpg" alt="" width="100%">
 
@@ -240,7 +240,8 @@
 
 
   <!-- NEWS -->
-  <div class="container-fluid " id="NEWS" style="position: relative; background-color: white; padding-top: 130px;">
+  <div class="container-fluid " id="NEWS"
+    style="position: relative; background-color: white; padding: 130px 0px 50px 0px;">
     <div class="page-title-holder">
       <h4 class="text-center p-md-5 p-5" style="color: white;">
         NEWS
@@ -249,12 +250,39 @@
     <div class="container px-5 bg-danger">
       <div class="row py-5 bg-info">
 
-        
-        <div class="col-md-4 col-12 text-md-start text-center px-3 bg-success">
-          <div>
-            <div class="Image-Hover">
 
-              <img src="/images/blog_img_01.jpg" alt="">
+        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0 bg-success">
+          <div>
+            <div class="Parent-Image-Hover">
+              <div class="child-Image-Hover bg-one"></div>
+            </div>
+
+            <h3 class="py-3">How to write rogue mote of dust love</h3>
+            <p style="color:rgb(180, 180, 180)">How to write rogue mote of dust love
+              Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
+              of global
+              death ...</p>
+          </div>
+
+        </div>
+        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0 bg-success">
+          <div>
+            <div class="Parent-Image-Hover">
+              <div class="child-Image-Hover bg-two"></div>
+            </div>
+
+            <h3 class="py-3">Epochs encyclopa galactica stellar</h3>
+            <p style="color:rgb(180, 180, 180)">How to write rogue mote of dust love
+              Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
+              of global
+              death ...</p>
+          </div>
+
+        </div>
+        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0 bg-success">
+          <div>
+            <div class="Parent-Image-Hover">
+              <div class="child-Image-Hover bg-three"></div>
             </div>
 
             <h3 class="py-3">How to write rogue mote of dust love</h3>
@@ -266,6 +294,10 @@
 
         </div>
 
+
+
+
+
         <div class="text-center mt-5">
           <a class="btn rounded-pill" href="#"> GO TO BLOG</a>
         </div>
@@ -276,16 +308,53 @@
     </div>
   </div>
 
+  <!-- PORTFOLIO -->
+  <div class="container-fluid " id="PORTFOLIO" style="position: relative; background-color: white; ">
+    <div class="page-title-holder">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+        PORTFOLIO
+      </h4>
+    </div>
+    <div class="row bg-info ">
+      <div class="col-md-3 col-12 px-0   bg-success">
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_01.jpg" alt="">
+          <div class="layer">
+            <p>INTERIOR</p>
+            <h3>Living Room</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-12 px-0   bg-success">
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_02.jpg" alt="">
+          <div class="layer">
+            <p>FASHION</p>
+            <h3>Modeling</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-12 px-0   bg-success ">
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_03.jpg" alt="">
+          <div class="layer">
+            <p class="py-3">CREATIVE</p>
+            <h3>Psd Mockup</h3>
+          </div>
+        </div>
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_04.jpg" alt="">
+          <div class="layer">
+            <p class="py-3">ARCHITECTURE</p>
+            <h3 >Pillars</h3>
+          </div>
+        </div>
+      </div>
 
 
 
-
-
-
-
-
-
-
+    </div>
+  </div>
 
 
 
