--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Seppo</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,9 +66,9 @@
 
   <!-- HOME -->
   <div class="container-fluid container-Background" style="padding: 82px 0 ;">
-    <div class="container  px-5 bg-danger">
-      <div class="row .row-div py-5 bg-info">
-        <div class="col-12 text-md-start text-center py-5 px-md-3 px-0 bg-success">
+    <div class="container px-md-5 px-3   ">
+      <div class="row .row-div py-5  ">
+        <div class="col-12 text-md-start text-center py-5 px-md-3 px-0  ">
           <h1 class="pb-5 text-white ">
             Technology <br>
             & Visual Agency
@@ -109,9 +109,9 @@
         ABOUT
       </h4>
     </div>
-    <div class="container  px-5 bg-danger">
-      <div class="row row-div py-5 bg-info">
-        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0  bg-success">
+    <div class="container  px-md-5 px-3  ">
+      <div class="row row-div py-5  ">
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0   ">
           <p class="pb-3" style="color:rgb(180, 180, 180)">
             WO WE ARE
             </h1>
@@ -119,7 +119,7 @@
             Live up to
             your creative potential.
           </h2>
-          <p class="pb-3" style="color:rgb(180, 180, 180)">
+          <p class="pb-3 px-md-0 px-2" style="color:rgb(180, 180, 180)">
             Code the energy hidden in matter citizens of distant epochs from which we spring drake equation perga
             inconspicuous
             motespatch clean designed code and energy matter.
@@ -240,53 +240,52 @@
 
 
   <!-- NEWS -->
-  <div class="container-fluid " id="NEWS"
-    style="position: relative; background-color: white; padding: 130px 0px 50px 0px;">
+  <div class="container-fluid " id="NEWS" style="position: relative; background-color: white; padding: 130px 0px 50px 0px;">
     <div class="page-title-holder">
       <h4 class="text-center p-md-5 p-5" style="color: white;">
         NEWS
       </h4>
     </div>
-    <div class="container px-5 bg-danger">
-      <div class="row py-5 bg-info">
+    <div class="container px-md-5 px-4  ">
+      <div class="row py-5  ">
 
 
-        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0 bg-success">
+        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-one"></div>
             </div>
 
             <h3 class="py-3">How to write rogue mote of dust love</h3>
-            <p style="color:rgb(180, 180, 180)">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
           </div>
 
         </div>
-        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0 bg-success">
+        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-two"></div>
             </div>
 
             <h3 class="py-3">Epochs encyclopa galactica stellar</h3>
-            <p style="color:rgb(180, 180, 180)">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
           </div>
 
         </div>
-        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0 bg-success">
+        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-three"></div>
             </div>
 
             <h3 class="py-3">How to write rogue mote of dust love</h3>
-            <p style="color:rgb(180, 180, 180)">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
@@ -315,8 +314,8 @@
         PORTFOLIO
       </h4>
     </div>
-    <div class="row bg-info ">
-      <div class="col-md-3 col-12 px-0   bg-success">
+    <div class="row   ">
+      <div class="col-md-3 col-12 px-0    ">
         <div class="portfolio-Hover">
           <img src="/images/portfolio_item_01.jpg" alt="">
           <div class="layer">
@@ -325,7 +324,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-12 px-0   bg-success">
+      <div class="col-md-6 col-12 px-0    ">
         <div class="portfolio-Hover">
           <img src="/images/portfolio_item_02.jpg" alt="">
           <div class="layer">
@@ -334,7 +333,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-12 px-0   bg-success ">
+      <div class="col-md-3 col-12 px-0     ">
         <div class="portfolio-Hover">
           <img src="/images/portfolio_item_03.jpg" alt="">
           <div class="layer">
@@ -346,7 +345,7 @@
           <img src="/images/portfolio_item_04.jpg" alt="">
           <div class="layer">
             <p class="py-3">ARCHITECTURE</p>
-            <h3 >Pillars</h3>
+            <h3>Pillars</h3>
           </div>
         </div>
       </div>
@@ -355,8 +354,6 @@
 
     </div>
   </div>
-
-
 
 
 
