--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 
   <!-- NEWS -->
-  <div class="container-fluid " id="NEWS" style="position: relative; background-color: white; padding: 130px 0px 50px 0px;">
+  <div class="container-fluid px-md-0 px-1" id="NEWS" style="position: relative; background-color: white; padding: 130px 0px 50px 0px;">
     <div class="page-title-holder">
       <h4 class="text-center p-md-5 p-5" style="color: white;">
         NEWS
@@ -257,7 +257,7 @@
             </div>
 
             <h3 class="py-3">How to write rogue mote of dust love</h3>
-            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2 pb-4">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
@@ -271,7 +271,7 @@
             </div>
 
             <h3 class="py-3">Epochs encyclopa galactica stellar</h3>
-            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2 pb-4">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
@@ -285,7 +285,7 @@
             </div>
 
             <h3 class="py-3">How to write rogue mote of dust love</h3>
-            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2 ">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
@@ -328,7 +328,7 @@
         <div class="portfolio-Hover">
           <img src="/images/portfolio_item_02.jpg" alt="">
           <div class="layer">
-            <p>FASHION</p>
+            <p class='py-md-0 py-3'>FASHION</p>
             <h3>Modeling</h3>
           </div>
         </div>
