--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
 
 
   <!-- NEWS -->
-  <div class="container-fluid px-md-0 px-1" id="NEWS" style="position: relative; background-color: white; padding: 130px 0px 50px 0px;">
+  <div class="container-fluid px-md-0 px-1" id="NEWS"
+    style="position: relative; background-color: white; padding: 130px 0px 50px 0px;">
     <div class="page-title-holder">
       <h4 class="text-center p-md-5 p-5" style="color: white;">
         NEWS
@@ -248,9 +249,7 @@
     </div>
     <div class="container px-md-5 px-4  ">
       <div class="row py-5  ">
-
-
-        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0  ">
+        <div class="col-lg-4 col-md-6 col-12 text-md-start text-center px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-one"></div>
@@ -264,7 +263,7 @@
           </div>
 
         </div>
-        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0  ">
+        <div class="col-lg-4 col-md-6 col-12 text-md-start text-center px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-two"></div>
@@ -278,7 +277,7 @@
           </div>
 
         </div>
-        <div class="col-md-4 col-12 text-md-start text-center px-md-3 px-0  ">
+        <div class="col-lg-4 col-md-6 col-12 text-md-start text-center px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-three"></div>
@@ -293,15 +292,9 @@
 
         </div>
 
-
-
-
-
         <div class="text-center mt-5">
           <a class="btn rounded-pill" href="#"> GO TO BLOG</a>
         </div>
-
-
 
       </div>
     </div>
@@ -354,6 +347,116 @@
 
     </div>
   </div>
+
+  <!-- PRICING -->
+  <div class="container-fluid " id="PORTFOLIO" style="position: relative; background-color: white; ">
+    <div class="page-title-holder">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+        PRICING
+      </h4>
+    </div>
+    <div class="row   ">
+      <div class="col-md-3 col-12 px-0    ">
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_01.jpg" alt="">
+          <div class="layer">
+            <p>INTERIOR</p>
+            <h3>Living Room</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-12 px-0    ">
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_02.jpg" alt="">
+          <div class="layer">
+            <p class='py-md-0 py-3'>FASHION</p>
+            <h3>Modeling</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-12 px-0     ">
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_03.jpg" alt="">
+          <div class="layer">
+            <p class="py-3">CREATIVE</p>
+            <h3>Psd Mockup</h3>
+          </div>
+        </div>
+        <div class="portfolio-Hover">
+          <img src="/images/portfolio_item_04.jpg" alt="">
+          <div class="layer">
+            <p class="py-3">ARCHITECTURE</p>
+            <h3>Pillars</h3>
+          </div>
+        </div>
+        
+      </div>
+
+
+
+    </div>
+  </div>
+
+
+<!--TEAM -->
+<div class="container-fluid " id="PORTFOLIO" style="position: relative; background-color: white; ">
+  <div class="page-title-holder">
+    <h4 class="text-center p-md-5 p-5" style="color: white;">
+      PRICING
+    </h4>
+  </div>
+  <div class="row   ">
+    <div class="col-md-3 col-12 px-0    ">
+      <div class="portfolio-Hover">
+        <img src="/images/portfolio_item_01.jpg" alt="">
+        <div class="layer">
+          <p>INTERIOR</p>
+          <h3>Living Room</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 col-12 px-0    ">
+      <div class="portfolio-Hover">
+        <img src="/images/portfolio_item_02.jpg" alt="">
+        <div class="layer">
+          <p class='py-md-0 py-3'>FASHION</p>
+          <h3>Modeling</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-12 px-0     ">
+      <div class="portfolio-Hover">
+        <img src="/images/portfolio_item_03.jpg" alt="">
+        <div class="layer">
+          <p class="py-3">CREATIVE</p>
+          <h3>Psd Mockup</h3>
+        </div>
+      </div>
+      <div class="portfolio-Hover">
+        <img src="/images/portfolio_item_04.jpg" alt="">
+        <div class="layer">
+          <p class="py-3">ARCHITECTURE</p>
+          <h3>Pillars</h3>
+        </div>
+      </div>
+
+    </div>
+
+
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
