--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Seppo</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/bootstrap.css">
   <link rel="stylesheet" href="/style.css">
@@ -15,7 +16,7 @@
 <body>
 
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark sticky" style="background-color: black;">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky" style="background-color: black; ">
     <div class="container-fluid px-4 ">
       <a class="navbar-brand" href="#">
         <img src="/Images/logo.png" alt="..." height="50">
@@ -25,12 +26,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto ">
+        <ul class="navbar-nav ms-auto  ">
           <li class="nav-item py-3 alig ">
-            <a class="Link active" href="#">Home</a>
+            <a class="Link active " href="#">Home</a>
           </li>
           <li class="nav-item py-3">
-            <a class="Link" href="#SERVICES">Services</a>
+            <a class="Link " href="#SERVICES">Services</a>
           </li>
           <li class="nav-item py-3">
             <a class="Link" href="#">About</a>
@@ -112,14 +113,14 @@
     <div class="container  px-md-5 px-3  ">
       <div class="row row-div py-5  ">
         <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0   ">
-          <p class="pb-3" style="color:rgb(180, 180, 180)">
+          <p class="pb-3" >
             WO WE ARE
             </h1>
           <h2 class="pb-4">
             Live up to
             your creative potential.
           </h2>
-          <p class="pb-3 px-md-0 px-2" style="color:rgb(180, 180, 180)">
+          <p class="pb-3 px-md-0 px-2" >
             Code the energy hidden in matter citizens of distant epochs from which we spring drake equation perga
             inconspicuous
             motespatch clean designed code and energy matter.
@@ -153,7 +154,7 @@
 
                     <div class="px-5">
                       <img src="/images/quotes_image.png" alt="" width="100px ">
-                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold; color: rgb(198, 198, 198);">Lorem
+                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold;   ">Lorem
                         ipsum dolor sit amet consectetur, adipisicing
                         elit. Odio nostrum dolore unde? Officia
                         temporibus
@@ -161,7 +162,7 @@
                         doloremque
                         praesentium odit beatae velit?
                       </p>
-                      <p style="color: rgb(198, 198, 198);"><span>
+                      <p ><span>
                           <img src="/images/quote_image_02.jpg" alt="" class="rounded-pill">
 
                           &nbsp;&nbsp;peter Hall &nbsp;&nbsp;
@@ -178,14 +179,14 @@
                     <div class="px-5">
 
                       <img src="/images/quotes_image.png" alt="" width="100px ">
-                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold; color: rgb(198, 198, 198);">Lorem
+                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold;   ">Lorem
                         ipsum dolor sit
                         amet consectetur, adipisicing
                         elit. Odio nostrum dolore unde? Officia
                         temporibus perspiciatis dolore molestiae voluptatum unde, voluptate esse atque adipisicing
                         elit. Odio nostrum dolore unde?
                       </p>
-                      <p style="color: rgb(198, 198, 198);"><span>
+                      <p><span>
                           <img src="/images/quote_image_03.jpg" alt="" class="rounded-pill">
 
                           &nbsp;Jane Williams
@@ -201,14 +202,14 @@
 
                     <div class="px-5">
                       <img src="/images/quotes_image.png" alt="" width="100px ">
-                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold; color: rgb(198, 198, 198);">Lorem
+                      <p class="pt-5 pb-3 " style="font-size: 22px;font-weight: bold;   ">Lorem
                         ipsum dolor sit
                         amet consectetur, adipisicing
                         elit. Odio nostrum dolore unde? Officia
                         temporibus perspiciatis dolore molestiae voluptatum unde,
                         perspiciatis dolore molestiae voluptatum unde, voluptate esse atque?
                       </p>
-                      <p style="color: rgb(198, 198, 198);"><span>
+                      <p ><span>
                           <img src="/images/quote_image_04.jpg" alt="" class="rounded-pill">
 
                           &nbsp;&nbsp;john smith &nbsp;&nbsp;
@@ -389,7 +390,7 @@
             <h3>Pillars</h3>
           </div>
         </div>
-        
+
       </div>
 
 
@@ -398,54 +399,72 @@
   </div>
 
 
-<!--TEAM -->
-<div class="container-fluid " id="PORTFOLIO" style="position: relative; background-color: white; ">
-  <div class="page-title-holder">
-    <h4 class="text-center p-md-5 p-5" style="color: white;">
-      PRICING
-    </h4>
+  <!--TEAM -->
+  <div class="container-fluid bg-danger " id="PORTFOLIO" style="position: relative; background-color: white; ">
+    <div class="page-title-holder">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+        TEAM
+      </h4>
+    </div>
+    <div class="container px-md-5 px-3 bg-info">
+
+      <div class="row ">
+        <div class="col-md-6 col-12 px-0 bg-success ">
+
+          <img src="/images/about_item_01.jpg" alt="" width="100%">
+
+        </div>
+        <div class="col-md-6 col-12 px-0 bg-success ">
+
+          <div class="member-info w-100 ">
+
+            <p>CEO</p>
+            <h3>Marty Stone</h3>
+            <p>Code the energy hidden in matter citizens of distant epochs sun. Citizens of distant epochs encyclopaedia
+              galant
+              ctica
+              the ash of stellar alchemy Vangelis white dwarf adipisci velit. Nemo enim ipsam volupta tem quia voluptas
+              sit
+              aspernatur
+              aut odit aut fugit radio telescope quis nostrum exercitatio nem ullam corporis suscipit laboriosam quis.
+            </p>
+
+          </div>
+          <div class="col-md-6 col-12 px-0 bg-success ">
+
+            <div class="member-Social w-100">
+
+              <div class="Social ">
+
+                <a href="#" target="_blank">
+                  <span class="fa fa-facebook px-2"></span>
+                </a>
+                <a href="#" target="_blank">
+                  <span class="fa fa-twitter px-2"></span>
+                </a>
+                <a href="#" target="_blank">
+                  <span class="fa fa-instagram px-2"></span>
+                </a>
+                <a href="#" target="_blank">
+                  <span class="fa fa-vimeo px-2"></span>
+                </a>
+                <a href="#" target="_blank">
+                  <span class="fa fa-behance px-2"></span>
+                </a>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+
+
+
+      </div>
+      
+    </div>
   </div>
-  <div class="row   ">
-    <div class="col-md-3 col-12 px-0    ">
-      <div class="portfolio-Hover">
-        <img src="/images/portfolio_item_01.jpg" alt="">
-        <div class="layer">
-          <p>INTERIOR</p>
-          <h3>Living Room</h3>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-12 px-0    ">
-      <div class="portfolio-Hover">
-        <img src="/images/portfolio_item_02.jpg" alt="">
-        <div class="layer">
-          <p class='py-md-0 py-3'>FASHION</p>
-          <h3>Modeling</h3>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-12 px-0     ">
-      <div class="portfolio-Hover">
-        <img src="/images/portfolio_item_03.jpg" alt="">
-        <div class="layer">
-          <p class="py-3">CREATIVE</p>
-          <h3>Psd Mockup</h3>
-        </div>
-      </div>
-      <div class="portfolio-Hover">
-        <img src="/images/portfolio_item_04.jpg" alt="">
-        <div class="layer">
-          <p class="py-3">ARCHITECTURE</p>
-          <h3>Pillars</h3>
-        </div>
-      </div>
-
-    </div>
-
-
-
-  </div>
-</div>
 
 
 
